adjusted the home details

--- a/src/index.css
+++ b/src/index.css
@@ -95,7 +95,7 @@ code {
 
 .content .name {
   font-size: 40px;
-  text-transform: uppercase;
+  /* text-transform: uppercase; */
   font-weight: bold;
   opacity: 0;
   animation: animate 1s ease-in-out 1 forwards;
