--- a/src/index.css
+++ b/src/index.css
@@ -2,7 +2,101 @@
 @tailwind components;
 @tailwind utilities;
 
-body {
+@font-face{
+  font-family: "Satoshi";
+  src:local("Satoshi-Black"),
+  url('./assets/fonts/Satoshi-Black.ttf') format("truetype");
+}
+@font-face{
+  font-family: "Satoshi";
+  src:local("Satoshi-BlackItalic"),
+  url('./assets/fonts/Satoshi-BlackItalic.ttf') format("truetype");
+}
+@font-face{
+  font-family: "Satoshi";
+  src:local("Satoshi-Bold"),
+  url('./assets/fonts/Satoshi-Bold.ttf') format("truetype");
+}
+@font-face{
+  font-family: "Satoshi";
+  src:local("Satoshi-BoldItalic"),
+  url('./assets/fonts/Satoshi-BoldItalic.ttf') format("truetype");
+}
+@font-face{
+  font-family: "Satoshi";
+  src:local("Satoshi-Italic"),
+  url('./assets/fonts/Satoshi-Italic.ttf') format("truetype");
+}
+@font-face{
+  font-family: "Satoshi";
+  src:local("Satoshi-Light"),
+  url('./assets/fonts/Satoshi-Light.ttf') format("truetype");
+}
+@font-face{
+  font-family: "Satoshi";
+  src:local("Satoshi-LightItalic"),
+  url('./assets/fonts/Satoshi-LightItalic.ttf') format("truetype");
+}
+@font-face{
+  font-family: "Satoshi";
+  src:local("Satoshi-Medium"),
+  url('./assets/fonts/Satoshi-Medium.ttf') format("truetype");
+}
+@font-face{
+  font-family: "Satoshi";
+  src:local("Satoshi-MediumItalic"),
+  url('./assets/fonts/Satoshi-MediumItalic.ttf') format("truetype");
+}
+@font-face{
+  font-family: "Satoshi";
+  src:local("Satoshi-Regular"),
+  url('./assets/fonts/Satoshi-Regular.ttf') format("truetype");
+}
+
+@layer base {
+  :root {
+    --chart-1: 12 76% 61%;
+    --chart-2: 173 58% 39%;
+    --chart-3: 197 37% 24%;
+    --chart-4: 43 74% 66%;
+    --chart-5: 27 87% 67%;
+  }
+
+  .dark {
+    --chart-1: 220 70% 50%;
+    --chart-2: 160 60% 45%;
+    --chart-3: 30 80% 55%;
+    --chart-4: 280 65% 60%;
+    --chart-5: 340 75% 55%;
+  }
+}
+
+.scrollbar-hide {
+  --ms-overflow-style: none;
+  scrollbar-width: none
+}
+*::-webkit-scrollbar {
+  width: 1 !important;
+  height: 4;
+  /* display:none */
+}
+*::-webkit-scrollbar-corner {
+  background-color: transparent;
+}
+
+*::-webkit-scrollbar-track {
+  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0);
+  box-shadow: inset 0 0 6px rgba(0, 0, 0, 0);
+}
+
+*::-webkit-scrollbar-thumb {
+  background-color: #e0e0e0;
+}
+.jodit-status-bar__item-right, .jodit-toolbar-button_speechRecognize{
+  display: none !important;
+}
+
+/* body {
   margin: 0;
   font-family: 'Inter', sans-serif;
   -webkit-font-smoothing: antialiased;
@@ -15,7 +109,7 @@ h1, h2, h3, h4 {
 
 code {
   font-family: 'JetBrains Mono', monospace;
-}
+} */
 
 .container{
   max-width: 87rem;
@@ -152,3 +246,5 @@ code {
   background: #ababab;
   color: #fff;
 }
+
+
