--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,6 @@
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=Poppins:wght@300;400;500;600;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Faculty+Glyphic&display=swap');
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -68,6 +71,76 @@
     --chart-3: 30 80% 55%;
     --chart-4: 280 65% 60%;
     --chart-5: 340 75% 55%;
+  }
+
+  html {
+    font-family: 'Faculty Glyphic', serif;
+    font-size: 14px;
+    font-weight: 400;
+    font-style: normal;
+  }
+  
+  h1 {
+    font-family: 'Faculty Glyphic', serif;
+    font-size: 1.75rem;
+    line-height: 1.2;
+    font-weight: 400;
+  }
+  
+  h2 {
+    font-family: 'Faculty Glyphic', serif;
+    font-size: 1.5rem;
+    line-height: 1.3;
+    font-weight: 400;
+  }
+  
+  h3 {
+    font-family: 'Faculty Glyphic', serif;
+    font-size: 1.25rem;
+    line-height: 1.4;
+    font-weight: 400;
+  }
+  
+  h4 {
+    font-family: 'Faculty Glyphic', serif;
+    font-size: 1.125rem;
+    line-height: 1.4;
+    font-weight: 400;
+  }
+  
+  p, span, div {
+    font-family: 'Faculty Glyphic', serif;
+    font-size: 0.875rem;
+    line-height: 1.5;
+    font-weight: 400;
+  }
+  
+  .text-xs {
+    font-size: 0.75rem;
+  }
+  
+  .text-sm {
+    font-size: 0.875rem;
+  }
+  
+  .text-base {
+    font-size: 1rem;
+  }
+  
+  .text-lg {
+    font-size: 1.125rem;
+  }
+  
+  .text-xl {
+    font-size: 1.25rem;
+  }
+  
+  .text-2xl {
+    font-size: 1.5rem;
+  }
+  
+  h1, h2, h3, h4, h5, h6 {
+    font-family: 'Poppins', sans-serif;
   }
 }
 
@@ -245,6 +318,13 @@ code {
 .button button:hover {
   background: #ababab;
   color: #fff;
+}
+
+/* Utility class for Faculty Glyphic */
+.faculty-glyphic {
+  font-family: 'Faculty Glyphic', serif;
+  font-weight: 400;
+  font-style: normal;
 }
 
 
